--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "XXXXXXXX",
+  "name": "JKayFoods",
   "version": "0.0.1-security",
   "description": "security holding package",
   "repository": "npm/security-holder"
